Add summary truncatation

--- a/templates/arxiv_item.jinja2
+++ b/templates/arxiv_item.jinja2
@@ -1,6 +1,6 @@
 Title: {{ arxiv.title }}
 Link: {{ arxiv.entry_id }}
 Summary:
-{{ arxiv.summary }}
+{{ summary }}
 Categories: {{ arxiv.categories | join(', ') }}
 Published On: {{ arxiv.published.strftime('%Y-%m-%d') }}
